# streamduck-gui

./: Cargo.toml
streamduck-gui/: Cargo.toml
streamduck-gui/src/: main.rs
streamduck-gui/src/ui/: mod.rs  util.rs
streamduck-gui/src/ui/device_editor/: input_grid.rs  mini_device.rs  mod.rs  properties.rs  stack.rs  tabs.rs
streamduck-gui/src/ui/device_list/: device_button.rs  mod.rs
streamduck-gui/src/ui/util/: mod.rs
streamduck-rust-client/: Cargo.toml
streamduck-rust-client/src/: api.rs  base.rs  event.rs  lib.rs  message.rs
