[package]
name = "streamduck-gui"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
streamduck-rust-client = { path = "../streamduck-rust-client", version = "0.1"}
egui = "0.27.2"
eframe = "0.27.2"
interpolation = "0.3.0"
